istio-helloworld/destination-rule-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld
spec:
  host: helloworld-all-in-v1
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
